--- a/src/components/PhotoItem/PhotoItem.css
+++ b/src/components/PhotoItem/PhotoItem.css
@@ -7,16 +7,10 @@ li {
 }
 
 .photo-item {
-  /* display: flex;
-  flex-direction: column;
-  border: 1px solid red;
-  width: fit-content; */
   display: flex;
 }
 
 .photo-list {
-  /* display: flex;
-  flex-direction: row; */
   display: flex;
   width: auto;
 }
@@ -28,4 +22,8 @@ li {
 
 p {
   margin: 0;
+}
+
+img {
+  width: 45%;
 }
